--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
 <script>
   mocha.run();
 </script>
-<script src="../dist/bitcore-lib-npccoin.min.js"></script>
+<script src="../dist/npccoincore-lib.min.js"></script>
 <script type="text/javascript">
   var privateKey = new bitcore.PrivateKey();
   console.log(privateKey)
